<resources>
    <string name="app_name">CRMVIET</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Sign in</string>
    <string-array name="languages">
        <item>Vietnamese</item>
        <item>English</item>
    </string-array>
    <string name="prompt_username">Username</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_crm_main">CRMViet</string>
    <string name="nav_header_website">demo.crmviet.vn</string>
    <string name="contract">Contract</string>
    <string name="customer">Customer</string>
    <string name="new_c">New</string>
    <string name="all_c">All</string>
    <string name="job">Tasks</string>
    <string name="transaction">Transaction</string>
    <string name="order">Order</string>
    <string name="report">Report</string>
    <string name="forecast">Forecast</string>
    <string name="quote">Quote</string>
    <string name="order_output">Order output</string>
    <string name="home">Home</string>
    <string name="language">Language</string>
    <string name="ngay7">7 days</string>
    <string name="ngay30">30 days</string>
    <string name="ngay90">90 days</string>
    <string name="Thangnay">this month</string>
    <string name="Thanhtoan">Payment</string>
    <string name="Thanhtoannhanvien">Payment by salesperson</string>
    <string name="donvi">(unit: 1000 đ )</string>
    <string name="Doanhthu">Revenue</string>
    <string name="Doanhthunhanvien">Revenue by salesperson</string>
    <string name="unit">unit</string>
    <string name="tongsocv">All tasks</string>
    <string name="hoanthanh">Completed</string>
    <string name="chuahoanthanh">Out of date</string>
    <string name="tatca">Total</string>
    <string name="moi">New</string>
    <string name="quan_tam">Interested</string>
    <string name="daky">Signed</string>
    <string name="tamdung">Unfollow</string>
    <string name="khac">Other</string>
    <string name="chuaxacnhan">Unconfimred</string>
    <string name="daxacnhan">Confimred</string>
    <string name="dagiao">Delivered</string>
    <string name="dahuy">Cancelled</string>
    <string name="trave">Give back</string>
    <string name="user_page">User page</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="warehouse"> Warehouse </string>
    <string name="Check_in_location">Checkin location</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customer_code">Customer code</string>
    <string name="customer_add">Add a new customer</string>
    <string name="customer_name">Customer name*</string>
    <string name="customer_birthday">Customer birthday</string>
    <string name="contact_birthday">Contact birthday</string>
    <string name="customer_email">Customer email</string>
    <string name="customer_address">Customer address</string>
    <string name="customer_account_number">Account number</string>
    <string name="customer_tax">Tax code</string>
    <string name="contact_name">Contact name*</string>
    <string name="contact_phone">Mobile phone</string>
    <string name="contact_email">Contact email</string>
    <string name="contact_work_phone">Contact work phone</string>
    <string name="customer_presenter">Presenter</string>
    <string name="customer_position">Position</string>
    <string name="customer_telephone">Telephone:*</string>
    <string name="customer_phone_number">Phone number</string>
    <string name="customer_point">Bonus point</string>
    <string name="user_owner">User owner</string>
    <string name="customer_bank_account">Bank account</string>
    <string name="customer_business_registered_address">Business sign address</string>
    <string name="customer_fax">Fax</string>
    <string name="customer_website">Website</string>
    <string name="customer_date_create">Date created</string>
    <string name="customer_country">Country</string>
    <string name="customer_province">Province/City</string>
    <string name="customer_district">District</string>
    <string name="customer_ward">Ward</string>
    <string name="customer_description">Description</string>
    <string name="customer_share">Share</string>
    <string name="select">Select</string>
    <string name="message_select_country">--- Select a country ---</string>
    <string name="message_select_city">--- Select a city ---</string>
    <string name="message_select_district">--- Select a district ---</string>
    <string name="message_select_ward">--- Select a ward ---</string>
    <string name="message_select_owner">--- Select user owner ---</string>
    <string name="empty_customer_name">Please input customer name!</string>
    <string name="empty_customer_code">Please input customer code</string>
    <string name="pull">Pull to refresh&#8230;</string>
    <string name="refresh">Refreshing&#8230;</string>
    <string name="release">Release </string>
    <string name="customer_add_short">Add</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="user">user</string>
    <string name="success">success</string>
    <string name="user_id" translatable="false">USER_ID</string>
    <string name="user_name" translatable="false">USER_NAME</string>
    <string name="user_full_name" translatable="false">USER_FULL_NAME</string>
    <string name="user_subset" translatable="false">USER_SUBSET</string>
    <string name="user_birthday" translatable="false">USER_BIRTHDAY</string>
    <string name="user_email" translatable="false">USER_EMAIL</string>
    <string name="owner" translatable="false">USER_OWNER</string>
    <string name="group_id" translatable="false">GROUP_ID</string>
    <string name="user_position" translatable="false">USER_POSITION</string>
    <string name="user_id_object" translatable="false">userId</string>
    <string name="user_name_object" translatable="false">userName</string>
    <string name="user_birthday_object" translatable="false">userBirthday</string>
    <string name="user_email_object" translatable="false">userEmail</string>
    <string name="user_full_name_object" translatable="false">userFullName</string>
    <string name="user_position_objet" translatable="false">userPosition</string>
    <string name="user_subset_object" translatable="false">userSubset</string>
    <string name="owner_object" translatable="false">userOwner</string>
    <string name="messages">messages</string>
    <string name="welcome">Welcome,</string>
    <string name="users">users</string>
    <string name="user_group_id" translatable="false">USER_GROUP_ID</string>
    <string name="date_format">dd-MM-yyyy</string>
    <string name="groups">groups</string>
    <string name="user_group_father_id" translatable="false">USER_GROUP_FATHER_ID</string>
    <string name="user_group_name" translatable="false">USER_GROUP_NAME</string>
    <string name="user_group_description" translatable="false">USER_GROUP_DESCRIPTION</string>
    <string name="user_group_id_object">userGroupId</string>
    <string name="user_group_name_object">userGroupName</string>
    <string name="user_group_father_id_object">userGroupFatherId</string>
    <string name="user_group_description_object">userGroupDescription</string>
    <string name="sign_in_fails">Sign in failed! Username or password was wrong.</string>
    <string name="empty_customer_fax">Please input customer fax</string>
    <string name="empty_customer_email">Please input customer email</string>
    <string name="empty_customer_tax_code">Please input tax code</string>
    <string name="empty_telephone">Please input telephone</string>
    <string name="customer_name_db" translatable="false">CUSTOMER_NAME</string>
    <string name="customer_code_db" translatable="false">CUSTOMER_CODE</string>
    <string name="customer_address_db" translatable="false">CUSTOMER_ADDRESS</string>
    <string name="office_address_db" translatable="false">OFFICE_ADDRESS</string>
    <string name="customer_telephone_db" translatable="false">TELEPHONE</string>
    <string name="customer_founding_db" translatable="false">CUSTOMER_FOUNDING</string>
    <string name="customer_fax_db" translatable="false">FAX</string>
    <string name="customer_reg_dttm_db" translatable="false">REG_DTTM</string>
    <string name="customer_reg_user_db" translatable="false">REG_USER</string>
    <string name="customer_owner_db" translatable="false">CUSTOMER_OWNER</string>
    <string name="customer_email_db" translatable="false">CUSTOMER_EMAIL</string>
    <string name="customer_website_db" translatable="false">CUSTOMER_WEBSITE</string>
    <string name="customer_tax_code_db" translatable="false">TAX_CODE</string>
    <string name="customer_bank_account_db" translatable="false">BANK_ACCOUNT</string>
    <string name="customer_description_db" translatable="false">CUSTOMER_DESCRIPTION</string>
    <string name="details">details</string>
    <string name="customer_text_response">customer</string>
    <string name="customer_id_db" translatable="false">CUSTOMER_ID</string>
    <string name="create_customer_success">Create a new customer successfully!</string>
    <string name="create_customer_fails">Failed to create a new customer</string>
    <string name="alert_title_remove_customer">Delete customer</string>
    <string name="alert_message_remove_customer">Do you want to delete "%1$s"?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="successful">successful</string>
    <string name="customers">customers</string>
    <string name="api_service_v1_ip" translatable="false">http://192.168.0.105/crmviet/api/v1</string>
    <string name="customer_edit">Edit a customer</string>
    <string name="save">Save</string>
    <string name="customer_upd_dttm_db" translatable="false">UPD_DTTM</string>
    <string name="customer_upd_user_db" translatable="false">UPD_USER</string>
    <string name="contract_id_db" translatable="false">CONTRACT_ID</string>
    <string name="contract_start_date_db" translatable="false">START_DATE</string>
    <string name="contract_status">Status</string>
    <string name="nodata_online">No data founded</string>
    <string name="contract_number">Contract number</string>
    <string name="contract_name">Contract name</string>
    <string name="contract_owner">Contract owner</string>
    <string name="contract_price">Contract price</string>
    <string name="contract_paid">Paid</string>
    <string name="contact_customer_email">Email</string>
    <string name="contact_customer_full_name">Customer full name</string>
    <string name="contact_customer_mobiphone">Mobiphone</string>
    <string name="contact_customer_workphone">Workphone</string>
    <string name="contact_customer_birthday">Birthday</string>
    <string name="contact_customer_gender">Sex</string>
    <string name="contact_customer_address">Address</string>
    <string name="contact_customer_postition">Position</string>
    <string name="contact_customer_nickchat">Yahoo</string>
    <string name="contact_supplier">supplier contact</string>
    <string name="logout">Logout</string>
    <string name="debt">Debt</string>
</resources>