<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_crm_approval_notification"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <com.handmark.pulltorefresh.library.PullToRefreshListView xmlns:ptr="http://schemas.android.com/apk/res-auto"

        android:id="@+id/lstNotifi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:showDividers="end"
        android:scrollbars="none"
        android:divider="#EEEEEE"
        android:dividerHeight="2dp"
        android:smoothScrollbar="true"
        ptr:ptrAnimationStyle="flip"
        ptr:ptrPullLabel="@string/pull"
        ptr:ptrRefreshLabel="@string/refresh"
        ptr:ptrReleaseLabel="@string/release"
        ptr:ptrSmoothScrollDuration="400" />

</RelativeLayout>
