<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_crm_transaction_notification"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vn.altalab.app.crmvietpack.notification.CrmTransactionNotificationActivity">

    <com.handmark.pulltorefresh.library.PullToRefreshListView xmlns:ptr="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ptrListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="#D3D3D3"
        android:smoothScrollbar="true"
        ptr:ptrAnimationStyle="flip"
        ptr:ptrPullLabel="@string/pull"
        ptr:ptrRefreshLabel="@string/refresh"
        ptr:ptrReleaseLabel="@string/release"
        ptr:ptrSmoothScrollDuration="400" />

</RelativeLayout>
