<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_form_rounded"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/contact_customer_full_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtContactCustomerFullName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/contact_customer_gender"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/contact_customer_email"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/contact_customer_postition"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPosition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/contact_customer_mobiphone"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtMobiphone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/contact_customer_birthday"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtBirthDay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/contact_customer_address"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/contact_customer_workphone"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtWorkphone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/contact_customer_nickchat"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtYahooChat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnContactCustomerEdit"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_action_edit" />

        <ImageButton
            android:id="@+id/btnContactCustomerRemove"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_action_remove" />

    </LinearLayout>
</LinearLayout>