<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vn.altalab.app.crmvietpack.TransactionFragment">

    <ProgressBar
        android:id="@+id/load_transaction"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/layout_list_transaction"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <com.handmark.pulltorefresh.library.PullToRefreshListView xmlns:ptr="http://schemas.android.com/apk/res-auto"
            android:id="@+id/lstTransaction"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:smoothScrollbar="true"
            ptr:ptrAnimationStyle="flip"
            ptr:ptrPullLabel="@string/pull"
            ptr:ptrRefreshLabel="@string/refresh"
            ptr:ptrReleaseLabel="@string/release"
            ptr:ptrSmoothScrollDuration="400" />

    </LinearLayout>
    <!-- TODO: Update blank fragment layout -->

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabTransaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:src="@drawable/ic_action_add" />

</FrameLayout>
