<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_crm_customer_transactions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="vn.altalab.app.crmvietpack.CrmCustomerTransactionsActivity"
    tools:showIn="@layout/activity_crm_customer_transactions">

    <ProgressBar
        android:id="@+id/loadCusTransaction"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/layoutTrans"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone">

        <com.handmark.pulltorefresh.library.PullToRefreshListView xmlns:ptr="http://schemas.android.com/apk/res-auto"
            android:id="@+id/lstTransaction"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="#b5b5b5"
            android:showDividers="end"
            android:smoothScrollbar="true"
            ptr:ptrAnimationStyle="flip"
            ptr:ptrPullLabel="@string/pull"
            ptr:ptrRefreshLabel="@string/refresh"
            ptr:ptrReleaseLabel="@string/release"
            ptr:ptrSmoothScrollDuration="400" />

    </LinearLayout>

</RelativeLayout>
